// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when building interchange extension with invalid trailing text should have no viable alternative error 1`] = `
Array [
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain'}, column: 0, line: 4, token: TrailingText",
]
`;

exports[`when building interchange extension with lowercase interchange extension name should have no viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Interchangeinterchange', column: 14, line: 2, token: interchange",
]
`;

exports[`when building interchange extension with no element property should have mismatched input error 1`] = `
Array [
  "mismatched input 'End Namespace' expecting {'association', 'association identity', 'descriptor', 'domain entity', 'domain entity identity'}, column: 0, line: 3, token: End Namespace",
]
`;

exports[`when building interchange extension with no interchange extension name should have no viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Interchangeadditions', column: 15, line: 2, token: additions",
]
`;

exports[`when building interchange with invalid trailing text should have extraneous input error 1`] = `
Array [
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain'}, column: 0, line: 6, token: TrailingText",
]
`;

exports[`when building interchange with lowercase interchange name should have no viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Interchangeinterchange', column: 14, line: 2, token: interchange",
]
`;

exports[`when building interchange with no documentation should have mismatched input error 1`] = `
Array [
  "mismatched input 'domain entity' expecting 'documentation', column: 4, line: 3, token: domain entity",
]
`;

exports[`when building interchange with no interchange component property should have mismatched input error 1`] = `
Array [
  "mismatched input 'End Namespace' expecting {'association', 'association identity', 'descriptor', 'domain entity', 'domain entity identity', 'extended documentation', 'use case documentation'}, column: 0, line: 5, token: End Namespace",
]
`;

exports[`when building interchange with no interchange name should have no viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Interchange[1]', column: 15, line: 2, token: [1]",
]
`;
